codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__questions_tests__oversized_question.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
assertion_line: 441
expression: "render_bottom_popup(&chat, 80)"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project
• Queued follow-up inputs                       │ CONTEXT LEDGER  context not
┌───────────────────────────────────────────────┤ measured · ≈0 source
│ What next?                                    │ estimates
│                                               │ Tab controls · Alt+C hide ·
│ Type your answer                              │ Ctrl+click open file
│                                               │
│ enter submit   ctrl+] skip                    │ SMART PRUNE       [···] SYNC
│ shift+→ main prompt                           │ Reading current thread state
└───────────────────────────────────────────────┤ Syncing… · /smart-prune on|
                                                │ off sets an explicit state
                                                │
                                                │ SUBAGENTS          [━━━●] ON
                                                │ May delegate to other agents
                                                │
                                                │ CONTEXT WINDOW  usage
                                                │ unavailable
                                                │ Context measurement
                                                │ unavailable until the first
                                                │ request snapshot
                                                │
                                                │ No portable context is
                                                │ available.
