codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__questions_tests__question_queue_hint_Up.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
assertion_line: 935
expression: "render_bottom_popup(&chat, 100)"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project
• Queued follow-up inputs                                   │CONTEXT LEDGER  context not measured ·
  ↳ queued                                                  │≈0 source estimates
┌──────────────────────────────────────────────────────────┐│Tab controls · Alt+C hide · Ctrl+click
│ 1 of 4                                                   ││open file
│                                                          ││
│ Which way?                                               ││SMART PRUNE                  [···] SYNC
│                                                          ││Reading current thread state
│ Type your answer                                         ││Syncing… · /smart-prune on|off sets an
│                                                          ││explicit state
│ enter submit   ctrl+] skip   ⌥+↓ main prompt             ││
│ ⌥+↑ next question                                        ││SUBAGENTS                     [━━━●] ON
└──────────────────────────────────────────────────────────┘│May delegate to other agents
                                                            │
                                                            │CONTEXT WINDOW  usage unavailable
                                                            │Context measurement unavailable until
                                                            │the first request snapshot
                                                            │
                                                            │No portable context is available.
